<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">싱글로</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="using_term"><u>이용약관</u></string>
    <string name="using_personal_info"><u>개인정보활용</u></string>
    <string name="down_the_line"><i><u>다운 더 라인</u></i></string>
    <string name="front"><i><u>프론트</u></i></string>
    <string name="cause_1">어드레스 시 꼬리뼈를 과도하게 뒤로 내밀며 허리에 과도한 아치를 만드는 자세를 말한다. 등 근육의 과도한 경직은 복근의 이완을 가져오고 이 경우 백 스윙 중 자세가 흐트러질 수 있는 확률이 증가한다. 이 증상을 완화하기 위해서는 우선 척추의 중립적인 위치는 유지하고 고관절만을 사용하여 몸을 앞으로 굽히는 것이 도움이 된다. 이 자세를 유지하기 위해서는 복근을 포함한 코어 근력이 좋아야 하며, 척추를 감싸고 있는 기립근의 근력도 필요하다.</string>
    <string name="cause_2">어드레스 시 양쪽 어깨가 앞쪽으로 구부러져 새우등 모습을 한 자세를 의미한다. 새우등 자세의 경우 보통 견갑의 근력 부족, 흉추의 유연성 부족, 코어의 근력 부족 등이 원인이 되어 나타난다. 결과적으로는 스윙 아크가 작아져 비거리 손실이 일어나며, 임팩트 시 팔이 지나가는 공간이 협소해져 효율적인 스윙 경로를 만들어내기가 힘들어진다. </string>
    <string name="cause_3">탑 스윙에서의 척추 각이 어드레스 시와 비교하였을 때 크게 바뀌는 것을 의미한다. 일반적으로 이 증상은 고관절의 유연성 부족, 상체와 하체의 밸런스 무너짐, 복부 근력 부족, 전반적인 유연성 부족 등이 원인으로 여겨진다. 스윙의 가장 중심 축인 척추 각이 틀어지는 것이기 떄문에, 일정한 샷 메이킹이 힘든 것이 특징이고, 일반적으로 아마추어 들은 이러한 증상은 임팩트 시 손목의 변형으로 커버하려 하기 때문에 손목 엘보우 등의 부상을 수반하기도 한다. </string>
    <string name="cause_4">어드레스 시 두 어깨를 이은 평면 백스윙의 탑에서 지나치게 지면과 평행하게 되는 자세를 의미한다. 척추 각이 변형되는 것이 가장 큰 원인인데, 이 증상은 스윙을 일관성, 효율성을 떨어뜨리는 주범이 된다. 상체가 일어슨 백스윙은 하체로 리드하는 것이 어렵기 때문에 "엎어치기" 등의 연속된 증상을 수반하게 된다. </string>
    <string name="cause_5">다운스윙 시 고관절과 척추가 너무 일찍 펴지게 되어, 어드레스 시 고관절이 있었던 위치보다 앞 쪽으로 빠지게 되는 증상을 의미한다. 일반적으로 고관절의 유연성 부족, 상체와 하체의 비대칭성, 하체 유연성의 부족 등을 그 원인으로 꼽을 수 있다. 고관절이 공 쪽으로 빠지게 됨으로써 임팩트 시 팔이 지나갈 공간을 막아버리는 결과를 초래하여 스윙의 일관성 및 효율성을 저하시키는 원인이 된다. 골반의 이동으로 인해 손목이 일찍 풀림으로써 뒷 땅이나 생크샷을 유발할 수도 있다. </string>
    <string name="cause_6">탑 스윙에서 다운 스윙으로 전개되는 과정을 하체의 리드가 아닌 과도한 상체의 리드로 인해 나타나는 증상이다. 이 경우 스윙의 궤도는 아웃투인으로 들어오며 공을 깍아쳐 슬라이스가 나거나 힘이 실리지 못하는 구질을 만들게 된다. 이 때 클럽 페이스가 스퀘어일 경우에는 당기는 샷이 되고, 열려 있을 경우에는 슬라이스 샷을 초래한다.</string>
    <string name="cause_7">백스욍 중 하체가 제 자리에서 회전하며 꼬임을 만들지 못하고, 백스윙의 방향으로 하체가 무너지며 과도하게 움직이는 것을 의미한다. 스웨이는 기본적으로 고관절의 유연성 부족, 둔근의 근력 부족, 하체의 근력 부족, 상체와 하체의 유연성 부족 등을 그 원인으로 한다. 이 경우, 백스윙 방향으로 이동한 무게 중심을 임팩트 시 다시 제자리로 돌려놓는 것이 힘들기 떄문에 퍼 올리는 샷이나 탑볼을 치는 경우가 발생할 수 있다. </string>
    <string name="cause_8">다운 스윙 중에 하체가 목표방향으로 과도하게 측면이동 하여 스윙의 축이 무너지는 것을 의미한다. 이 증상은 하체의 근력 부족이, 둔근의 근력 부족, 고관절의 유연성 부족을 원인으로 들 수 있다. 안정적인 하체가 유지되지 못한 스윙은 안정적이고 파괴력 있는 에너지를 클럽으로 전달하는 것을 방해하며, 결과적으로 스윙의 비효율성을 초래한다.</string>
    <string name="cause_9">백 스윙 중에 상체가 과도하게 타겟 방향 쪽으로 꺾이는 것을 의미한다. 이 스윙의 특성은 하체의 위치가 다운스윙을 시작하기 어려운 곳에 있어 다운 스윙을 올바른 순서로 시작하는 것을 어렵게 한다는 것이다. 리버스 스파인 앵글은 척추와 직접적으로 연관되는 실수이기 떄문에 지속될 경우 골퍼의 허리 통증을 일으키는 주 원인이 된다. 또한, 하체로 다운 스윙을 시작할 수 없기 때문에 상체가 과도하게 사용되어 오버더탑 증상도 보이기 쉬우며, 그로 인해 스윙궤도의 문제를 일으키고 힘을 쓰는 것이 제한된다. 또한, 이 증상은 백스윙 중에 복부 근육을 억제하여 허리에 과도한 긴장을 일으키기도 한다. 그 원인으로는 상체와 하체 꼬임의 유연성 부족, 하체 고관절의 유연성 부족, 복부 근력 부족 등을 들 수 있다. </string>
    <string name="cause_10">다운 스윙 시 체중이 뒷 쪽에 남아 있는 것을 의미한다. 이 경우 공을 제대로 눌러 칠 수 없게 되어 공에 전달되는 에너지의 손실이 증가하여 힘 없이 날아가는 구질을 초래한다. 또한, 이 증상은 골퍼가 하체와 몸통의 큰 근육을 사용한 스윙이 아닌 손으로 클럽을 움직여 스윙을 하게 되므로 일관성 있는 샷을 구사하기 어렵게 된다. </string>
    <string name="cause_11">임팩트 존에서 손목의 코킹이 너무 빨리 풀려버리는 것을 의미한다. 이 증상은 스윙의 탑에서 상체로 리드하는 스윙, 역 피봇, 골반 일어서기, 또는 손목의 유연성 부족 등의 자세에서 그 원인을 찾을 수 있다. 임팩트 존에서 손목의 각도가 일찍 풀리게 되면, 공을 어퍼블로우로 가격하게 되어 공의 탄도가 높아지고 거리가 줄어드는 결과를 초래한다. </string>
    <string name="cause_12">임팩트 후 리드하는 팔꿈치가 펴지지 않아 정확한 릴리즈에 실패하는 증상을 의미한다. 이 증상은 임팩트 존에서 클럽 헤드의 속도가 감소되어 스윙의 힘을 제대로 공에 전달하기 어렵게 하는데, 그 결과 높고 약한 타구가 나타나거나 리드하는 팔에 테니스 엘보우 등의 부상을 유발하기도 한다. 치킨윙은 리드하는 팔의 근력 부족, 리드하는 어깨의 유연성 부족, 아웃-인 스윙 궤도 등에서 그 원인을 찾을 수 있다. </string>
    <string name="causeTitle_1">과도한 등 긴장 자세</string>
    <string name="causeTitle_2">새우등 자세</string>
    <string name="causeTitle_3">척추 각 이탈</string>
    <string name="causeTitle_4">어깨 일어서기</string>
    <string name="causeTitle_5">골반 일어서기</string>
    <string name="causeTitle_6">엎어치기</string>
    <string name="causeTitle_7">스웨이</string>
    <string name="causeTitle_8">슬라이드</string>
    <string name="causeTitle_9">역 피봇</string>
    <string name="causeTitle_10">무게 이동 실패</string>
    <string name="causeTitle_11">손목 풀림</string>
    <string name="causeTitle_12">치킨윙</string>
    <string name="description_top_background">Top Background</string>
    <string name="description_back_button">Back Button</string>
    <string name="text_register">회원가입</string>
    <string name="description_profile_image">Profile Image</string>
    <string name="text_name">이름</string>
    <string name="text_hint_name">한글</string>
    <string name="text_birthday">생일</string>
    <string name="text_hint_birthday">주민등록번호 앞자리</string>
    <string name="text_phone">전화번호</string>
    <string name="text_hint_phone">01012345678</string>
    <string name="description_null"/>
    <string name="text_agree">동의</string>
    <string name="text_startSinglo">싱글로 시작하기</string>

</resources>