<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_top_background"
                android:scaleType="fitXY"
                android:src="@drawable/top_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/BackImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="46dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/description_back_button"
                    android:scaleType="centerCrop"
                    android:src="@drawable/back_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="21dp"
                    android:adjustViewBounds="true"
                    android:text="@string/text_register"
                    android:textColor="#e2e2e2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:contentDescription="@string/description_profile_image"
            android:maxWidth="100dp"
            android:padding="5dp"
            android:src="@drawable/join_example_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.42" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/text_name"
                android:textColor="#718770"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/join_input_back"
                android:ems="10"
                android:hint="@string/text_hint_name"
                android:lines="1"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_weight="0.42" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/text_birthday"
                android:textColor="#718770"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/BirthdayEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/join_input_back"
                android:ems="10"
                android:hint="@string/text_hint_birthday"
                android:lines="1"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_weight="0.42" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/text_phone"
                android:textColor="#718770"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/PhoneNumberEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="46dp"
                android:background="@drawable/join_input_back"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_weight="0.42" >

            <ImageButton
                android:id="@+id/UsingTermImageButton"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="85dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_null"
                android:scaleType="centerCrop"
                android:src="@drawable/register_checkoff" />

            <TextView
                android:id="@+id/UsingTermTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/using_term"
                android:textColor="#969696" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/text_agree"
                android:textColor="#969696" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp" >

            <ImageButton
                android:id="@+id/UsingPersonalInfoImageButton"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="85dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_null"
                android:scaleType="centerCrop"
                android:src="@drawable/register_checkoff" />

            <TextView
                android:id="@+id/UsingPersonalInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/using_personal_info"
                android:textColor="#969696" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/text_agree"
                android:textColor="#969696" />
        </LinearLayout>

        <Button
            android:id="@+id/StartSingloButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/join_start_back"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_startSinglo"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/description_null"
            android:src="@drawable/join_bottom_logo" />
    </LinearLayout>

</ScrollView>